--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>I am a senior at Rutgers Business School majoring in Business Analytics and Information Technology. With a strong interest in data analytics and information technology, I am actively seeking opportunities to apply my skills and gain real-world experience in these fields.</p>
         </div>
         <div class="profile-image">
-            <img src="/Users/manyapatel284/manya-personal-website/images/manya-image.jpeg" alt="Your Image">
+            <img src="images/manya-image.jpeg" alt="Your Image">
         </div>
     </section>
 
